# test-suite

./: .gitignore  Dockerfile  bitbucket-pipelines.yml  conftest.py  main.py  pyproject.toml  pytest.ini
reports/: report.html
test_suite/src/: initializer_set_up.py  requirements.txt
test_suite/src/Constants/: constant.py  credentials.py  endpoints.py
test_suite/src/modules/api/: login.py
test_suite/src/modules/database/: requests_database.py
test_suite/src/services/: api_helper.py  mysql_helper.py  selenium_helper.py
test_suite/src/utilities/: assertion.py  logger.py  rand_values.py  utils.py
tests/test/api/: test_reqres.py
